--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=24" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <link href="styles.css?v=25" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -40,34 +41,47 @@
         </div>
     </header>
     <div class="container">
+        <!-- Dark Mode Switch -->
+        <div class="theme-switch-wrapper">
+            <span id="toggle-icon">
+                <span class="toggle-text"></span>
+                <i class="fas fa-sun"></i>
+            </span>
+            <label class="theme-switch">
+                <input type="checkbox">
+                <div class="slider round"></div>
+            </label>
+        </div>
         <div class="heading-title">
             <h3 class="text-center" style="padding: 20px;">P R O J E C T S</h3>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">NOTE BOARD</h5>
             <p>A JavaScript web project to create a note board, featuring drag and drop functionality.</p>
-            <video class="project-video" src="./videos/note-board.mp4" controls poster="./images/projects/note-board.png">
+            <video class="project-video" src="./videos/note-board.mp4" controls
+                poster="./images/projects/note-board.png">
                 <script>
                     var video = document.currentScript.parentElement;
                     video.volume = 0.3;
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/note-board.git"><img title="Note Board on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/note-board.git"><i title="Note Board on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">LIGHT DARK MODE</h5>
             <p>A JavaScript web project where you can switch between a light and dark mode theme.</p>
-            <video class="project-video" src="./videos/light-dark-mode.mp4" controls poster="./images/projects/light-dark-mode.png">
+            <video class="project-video" src="./videos/light-dark-mode.mp4" controls
+                poster="./images/projects/light-dark-mode.png">
                 <script>
                     var video = document.currentScript.parentElement;
                     video.volume = 0.3;
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/light-dark-mode.git"><img title="Light Dark Mode on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/light-dark-mode.git"><i title="Light Dark Mode on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">MUSIC PLAYER</h5>
@@ -79,8 +93,8 @@
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/music-player.git"><img title="Music Player on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/music-player.git"><i title="Music Player on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">SPOCK ROCK GAME</h5>
@@ -92,16 +106,15 @@
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/spock-rock-game.git"><img title="Spock Rock Game on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/spock-rock-game.git"><i title="Spock Rock Game on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">LACHELLE-ANNE.COM</h5>
             <p>A Static HTML website created to display my portfolio, including project demos and a blog.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><img
-                        title="lachelle-anne.com on GitHub" class="project-github-icon"
-                        src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><i
+                        title="lachelle-anne.com on GitHub" class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">NOTEPAD</h5>
@@ -114,8 +127,8 @@
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/notepad.git"><img title="Notepad on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/notepad.git"><i title="Notepad on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
 
         <div class="bubble project-subheading text-center">
@@ -131,13 +144,12 @@
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/membership-system.git"><img
-                        title="Membership System on GitHub" class="project-github-icon"
-                        src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/membership-system.git"><i title="Membership System on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
-            <h6><a class="link" target="_blank" rel="noopener noreferrer"
-                href="https://github.com/lachelle-anne">See more projects on GitHub!</a></h6>
+            <h6><a class="link" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne">See
+                    more projects on GitHub!</a></h6>
         </div>
         <div class="heading-title">
             <h3 class="text-center" style="padding: 20px;">COLLABORATIONS</h3>
@@ -149,8 +161,8 @@
                 instrument tuning React application,
                 designing the user interface of this project using React & Typescript.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/jasperdunn/tunings.git"><img title="Tune It on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/jasperdunn/tunings.git"><i title="Tune It on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">ARKSCRIBE</h5>
@@ -160,8 +172,8 @@
                 breeding tracker for the game Ark: Survival Evolved,
                 designing the interface of this project with WPF.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/Necropixel15616/ArkScribe.git"><img title="ArkScribe on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/Necropixel15616/ArkScribe.git"><i title="ArkScribe on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">THE NAV BAR</h5>
@@ -171,21 +183,22 @@
                 member and admin roles have been created to manage and restrict different sections within the system.
                 This was a project completed for the Diploma of Software Development at TAFE NSW.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/Necropixel15616/ArkScribe.git"><img title="The Nav Bar on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/the-nav-bar.git"><i title="The Nav Bar on GitHub"
+                        class="fab fa-github project-github-icon"></i></a></p>
         </div>
     </div>
     <footer class="footer">
-        <a title="Email" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
-                class="footer-icon" src="images/icons/envelope-fill.svg" alt="email" /></a>
-        <a title="Instagram" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><img
-                class="footer-icon" src="images/icons/instagram.svg" alt="instagram" /></a>
+        <a title="Email" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><i
+                class="far fa-envelope footer-icon" alt="email"></i></a>
+        <a title="Instagram" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><i
+                class="fab fa-instagram footer-icon" alt="instagram"></i></a>
         <a title="LinkedIn" target="_blank" rel="noopener noreferrer"
-            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/icons/linkedin.svg"
-                alt="linkedin" /></a>
-        <a title="GitHub" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img
-                class="footer-icon" src="images/icons/github.svg" alt="github" /></a>
+            href="https://www.linkedin.com/in/lachelle-anne/"><i class="fab fa-linkedin-in footer-icon"
+                alt="linkedin"></i></a>
+        <a title="GitHub" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><i
+                class="fab fa-github-alt footer-icon" alt="github"></i></a>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
