dark mode update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
-    <link href="styles.css?v=25" rel="stylesheet" />
+    <link href="styles.css?v=26" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -44,7 +44,7 @@
         <!-- Dark Mode Switch -->
         <div class="theme-switch-wrapper">
             <span id="toggle-icon">
-                <span class="toggle-text"></span>
+                <span></span>
                 <i class="fas fa-sun"></i>
             </span>
             <label class="theme-switch">
@@ -78,7 +78,7 @@
             href="https://www.linkedin.com/in/lachelle-anne/"><i class="fab fa-linkedin-in footer-icon"
                 alt="linkedin"></i></a>
         <a title="GitHub" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><i
-                class="fab fa-github-alt footer-icon" alt="github"></i></a>
+                class="fab fa-github footer-icon" alt="github"></i></a>
     </footer>
     <script src="script.js"></script>
 </body>
