--- a/about.html
+++ b/about.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
+    <link rel="icon" type="image/svg" href="./images/code_html_link_share_icon.svg">
+    <link rel="canonical" href="https://lachelle-anne.com/about.html">
+    <meta name="referrer" content="none-when-downgrade">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
-    <link href="styles.css?v=29" rel="stylesheet" />
+    <link href="styles.css?v=30" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
