--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
+    <link rel="icon" type="image/svg" href="./images/code_html_link_share_icon.svg">
+    <link rel="canonical" href="https://lachelle-anne.com/projects.html">
+    <meta name="referrer" content="none-when-downgrade">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
-    <link href="styles.css?v=29" rel="stylesheet" />
+    <link href="styles.css?v=30" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -156,8 +159,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">TUNE IT</h5>
-            <p>A collaboration with <a title="jasperdunn" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/jasperdunn">Jasper</a> on an
+            <p>A collaboration with <a class="profile-link" title="jasperdunn" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/jasperdunn">@Jasper</a> on an
                 instrument tuning React application,
                 designing the user interface of this project using React & Typescript.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
@@ -166,8 +169,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">ARKSCRIBE</h5>
-            <p>A C# collaboration with <a title="Necropixel15616" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/Necropixel15616">Jacob</a> on
+            <p>A C# collaboration with <a class="profile-link" title="Necropixel15616" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/Necropixel15616">@Jacob</a> on
                 a
                 breeding tracker for the game Ark: Survival Evolved,
                 designing the interface of this project with WPF.</p>
@@ -177,8 +180,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">THE NAV BAR</h5>
-            <p>An ASP.NET core MVC collaboration with <a title="Necropixel15616" target="_blank"
-                    rel="noopener noreferrer" href="https://github.com/Necropixel15616">Jacob</a> on a
+            <p>An ASP.NET core MVC collaboration with <a class="profile-link" title="Necropixel15616" target="_blank"
+                    rel="noopener noreferrer" href="https://github.com/Necropixel15616">@Jacob</a> on a
                 reservation system for restaurants, enabling management of bookings and processing reservations. Guest,
                 member and admin roles have been created to manage and restrict different sections within the system.
                 This was a project completed for the Diploma of Software Development at TAFE NSW.</p>
