--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lachelle | Blog</title>
+    <title>Lachelle Pavlovic | Blog</title>
     <link rel="icon" type="image/svg" href="./images/code_html_link_share_icon.svg">
     <link rel="canonical" href="https://lachelle-anne.com/blog.html">
     <meta name="referrer" content="none-when-downgrade">
