--- a/index.html
+++ b/index.html
@@ -1,87 +1,126 @@
 ﻿<!DOCTYPE html>
 <html lang="en-au">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lachelle | Home</title>
-    <link rel="icon" type="image/svg" href="./images/code_html_link_share_icon.svg">
-    <link rel="canonical" href="https://lachelle-anne.com/index.html">
-    <meta name="referrer" content="none-when-downgrade">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <title>Lachelle Pavlovic | Home</title>
+    <link
+      rel="icon"
+      type="image/svg"
+      href="./images/code_html_link_share_icon.svg"
+    />
+    <link rel="canonical" href="https://lachelle-anne.com/index.html" />
+    <meta name="referrer" content="none-when-downgrade" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
     <link href="styles.css?v=31" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'UA-203236141-1');
+      gtag("config", "UA-203236141-1");
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="navigation">
-            <nav>
-                <ul class="nav nav-tabs nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+      <div class="navigation">
+        <nav>
+          <ul class="nav nav-tabs nav-fill">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <div class="container">
-        <!-- Dark Mode Switch -->
-        <div class="theme-switch-wrapper">
-            <label class="theme-switch">
-                <input type="checkbox">
-                <span id="toggle-icon">
-                    <i class="fas fa-sun"></i>
-                </span>
-            </label>
-        </div>
-        <div class="welcome text-center">
-            <h1>L A C H E L L E</h1>
-            <h4>P A V L O V I C</h4>
-        </div>
-        <div class="home-image-column">
-            <img class="profile-image" src="images/profile_img.jpg" alt="lachelle-anne">
-        </div>
-        <div class="paragraph text-center">
-            <p>Hello and welcome to my page!</p>
-            <p>I'm a graduate developer with an interest in client-side web development.</p>
-            <p>After completing my Diploma in June 2021, I have been working on a range of projects to improve
-                my understanding and fluency in programming languages, IDE's and tools. I aspire to work among a team of
-                passionate developers who share the same curiosity for
-                programming as I do!</p>
-            <p>~Happy coding!</p>
-        </div>
+      <!-- Dark Mode Switch -->
+      <div class="theme-switch-wrapper">
+        <label class="theme-switch">
+          <input type="checkbox" />
+          <span id="toggle-icon">
+            <i class="fas fa-sun"></i>
+          </span>
+        </label>
+      </div>
+      <div class="welcome text-center">
+        <h1>L A C H E L L E</h1>
+        <h4>P A V L O V I C</h4>
+      </div>
+      <div class="home-image-column">
+        <img
+          class="profile-image"
+          src="images/profile_img.jpg"
+          alt="lachelle-anne"
+        />
+      </div>
+      <div class="paragraph text-center">
+        <p>Hello and welcome to my page!</p>
+        <p>
+          I'm a graduate developer with an interest in client-side web
+          development.
+        </p>
+        <p>
+          After completing my Diploma in June 2021, I have been working on a
+          range of projects to improve my understanding and fluency in
+          programming languages, IDE's and tools. I aspire to work among a team
+          of passionate developers who share the same curiosity for programming
+          as I do!
+        </p>
+        <p>~Happy coding!</p>
+      </div>
     </div>
     <footer class="footer">
-        <a title="Email" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><i
-                class="far fa-envelope footer-icon" alt="email"></i></a>
-        <a title="Instagram" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><i
-                class="fab fa-instagram footer-icon" alt="instagram"></i></a>
-        <a title="LinkedIn" target="_blank" rel="noopener noreferrer"
-            href="https://www.linkedin.com/in/lachelle-anne/"><i class="fab fa-linkedin-in footer-icon"
-                alt="linkedin"></i></a>
-        <a title="GitHub" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><i
-                class="fab fa-github footer-icon" alt="github"></i></a>
+      <a
+        title="Email"
+        target="_blank"
+        rel="noopener noreferrer"
+        href="mailto:lachelle.anne@gmail.com"
+        ><i class="far fa-envelope footer-icon" alt="email"></i
+      ></a>
+      <a
+        title="Instagram"
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://www.instagram.com/la_codes/"
+        ><i class="fab fa-instagram footer-icon" alt="instagram"></i
+      ></a>
+      <a
+        title="LinkedIn"
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://www.linkedin.com/in/lachelle-anne/"
+        ><i class="fab fa-linkedin-in footer-icon" alt="linkedin"></i
+      ></a>
+      <a
+        title="GitHub"
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://github.com/lachelle-anne"
+        ><i class="fab fa-github footer-icon" alt="github"></i
+      ></a>
     </footer>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
