--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lachelle | Projects</title>
+    <title>Lachelle Pavlovic | Projects</title>
     <link
       rel="icon"
       type="image/svg"
