Updated homepage + consdensed blog into about page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
-    <link href="styles.css?v=31" rel="stylesheet" />
+    <link href="styles.css?v=32" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -47,9 +47,6 @@
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
           </ul>
         </nav>
       </div>
@@ -77,17 +74,17 @@
       </div>
       <div class="paragraph text-center">
         <p>Hello and welcome to my page!</p>
+        <p>I'm a Junior Software Engineer at OFX.</p>
         <p>
-          I'm a graduate developer with an interest in client-side web
-          development.
+          I have interests in client-side web development and am currently
+          persuing knowledge within server-side development.
         </p>
         <p>
-          After completing my Diploma in June 2021, I have been working on a
-          range of projects to improve my understanding and fluency in
-          programming languages, IDE's and tools. I aspire to work among a team
-          of passionate developers who share the same curiosity for programming
-          as I do!
+          After completing my Diploma in June 2021, I focused on a range of
+          projects and courses to improve my understanding and fluency in
+          programming languages, IDE's and tools.
         </p>
+        <p>Please join me on my journey through the platforms listed below!</p>
         <p>~Happy coding!</p>
       </div>
     </div>
