--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <p>Hello and welcome to my page!</p>
         <p>I'm a Junior Software Engineer at OFX.</p>
         <p>
-          I have interests in client-side web development and am currently
-          persuing knowledge within server-side development.
+          I am interested in client-side web development and am currently
+          pursuing knowledge in server-side development.
         </p>
         <p>
-          After completing my Diploma in June 2021, I focused on a range of
+          After completing my Diploma in 2021, I focused on a range of
           projects and courses to improve my understanding and fluency in
           programming languages, IDE's and tools.
         </p>
