added 2022 projects to project page

--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,33 @@
         <h3 class="text-center" style="padding: 20px">P R O J E C T S</h3>
       </div>
       <div class="bubble project-subheading text-center">
+        <h5 class="project">2022 MINI JAVASCRIPT PROJECTS</h5>
+        <p>A bundle of mini JavaScript web projects</p>
+        <video
+          class="project-video"
+          src="./videos/2022-projects.mp4"
+          controls
+          poster="./images/projects/2022-projects.jpg"
+        >
+          <script>
+            var video = document.currentScript.parentElement;
+            video.volume = 0.3;
+          </script>
+        </video>
+        <p>
+          <a
+            class="project-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://github.com/lachelle-anne"
+            ><i
+              title="lachelle-anne on GitHub"
+              class="fab fa-github project-github-icon"
+            ></i
+          ></a>
+        </p>
+      </div>
+      <div class="bubble project-subheading text-center">
         <h5 class="project">NOTE BOARD</h5>
         <p>
           A JavaScript web project to create a note board, featuring drag and
