--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     />
     <link href="styles.css?v=33" rel="stylesheet" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q49M75SD94"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -29,7 +29,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-203236141-1");
+      gtag("config", "G-Q49M75SD94");
     </script>
   </head>
 
@@ -80,15 +80,15 @@
           pursuing knowledge in server-side development.
         </p>
         <p>
-          After completing my Diploma in 2021, I focused on a range of
-          projects and courses to improve my understanding and fluency in
-          programming languages, IDE's and tools.
+          After completing my Diploma in 2021, I focused on a range of projects
+          and courses to improve my understanding and fluency in programming
+          languages, IDE's and tools.
         </p>
         <p>Please join me on my journey through the platforms listed below!</p>
         <p>~Happy coding!</p>
       </div>
     </div>
-    
+
     <footer class="footer">
       <a
         title="Email"
