--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,10 @@
     />
     <link href="styles.css?v=33" rel="stylesheet" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q49M75SD94"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -29,7 +29,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-203236141-1");
+      gtag("config", "G-Q49M75SD94");
     </script>
   </head>
 
