updated gtag ID

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-Q49M75SD94"
+    src="https://www.googletagmanager.com/gtag/js?id=G-J5X6NKJJKD"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -30,7 +30,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-Q49M75SD94");
+    gtag("config", "G-J5X6NKJJKD");
   </script>
 
   <body>
