--- a/index.html
+++ b/index.html
@@ -74,15 +74,19 @@
       </div>
       <div class="paragraph text-center">
         <p>Hello and welcome to my page!</p>
-        <p>I'm a Junior Software Engineer at OFX.</p>
         <p>
-          I am interested in client-side web development and am currently
-          pursuing knowledge in server-side development.
+          I'm a Junior Software Engineer with an interest in client-side web
+          development.
         </p>
         <p>
-          After completing my Diploma in 2021, I focused on a range of projects
-          and courses to improve my understanding and fluency in programming
-          languages, IDE's and tools.
+          Currently, I'm pursuing knowledge in server-side development at OFX,
+          previously working on API integration for customers and partners, and
+          presently aiding in the migration of legacy systems to modern
+          platforms.
+        </p>
+        <p>
+          I seek to further improve my understanding and fluency in multiple
+          programming languages, IDEs and tools.
         </p>
         <p>Please join me on my journey through the platforms listed below!</p>
         <p>~Happy coding!</p>
