update bio and skills

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
-    <link href="styles.css?v=33" rel="stylesheet" />
+    <link href="styles.css?v=34" rel="stylesheet" />
   </head>
 
   <!-- Google tag (gtag.js) -->
@@ -42,17 +42,13 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
-    <div class="container">
-      <!-- Dark Mode Switch -->
+    <div class="container" style="margin-bottom:35px;">
       <div class="theme-switch-wrapper">
         <label class="theme-switch">
           <input type="checkbox" />
@@ -63,7 +59,7 @@
       </div>
       <div class="welcome text-center">
         <h1>L A C H E L L E</h1>
-        <h4>P A V L O V I C</h4>
+        <h4>P A V L O V I C</h4>       
       </div>
       <div class="home-image-column">
         <img
@@ -92,7 +88,82 @@
         <p>~Happy coding!</p>
       </div>
     </div>
+    <div class="container" style="margin-top:35px;">
+      <div class="column">
+        <h5 class="subtitle text-center" style="padding: 10px">SKILLS</h5>
+        <div class="bar">
+          <div class="info">
+            <span>JavaScript</span>
+          </div>
+          <div class="progress-line javascript">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>TypeScript</span>
+          </div>
+          <div class="progress-line typescript">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>C#</span>
+          </div>
+          <div class="progress-line c-sharp">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>SQL</span>
+          </div>
+          <div class="progress-line sql">
+            <span></span>
+          </div>
+        </div>
+        <div class="bubble" style="margin-top: 30px; padding: 20px">
+          <h6 class="skills-type">OTHER LANGUAGES</h6>
+          <p class="skills">YAML, JSON, HTML, CSS</p>
+          <h6 class="skills-type">LIBRARIES</h6>
+          <p class="skills">React</p>
+          <h6 class="skills-type">FRAMEWORKS</h6>
+          <p class="skills">Bootstrap, ASP.NET, React Native</p>
+          <h6 class="skills-type">TOOLS / SERVICES</h6>
+          <p class="skills">Google Analytics, Git</p>
+        </div>
+      </div>
+      <div class="column">
+        <h5 class="subtitle text-center" style="padding: 10px">EDUCATION</h5>
+        <div class="education">
+          <div class="bubble">
+            <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
+            <p><b>TAFE NSW</b></p>
+          </div>
+        </div>
+        <div class="education">
+          <div class="bubble">
+            <p>CERTIFICATE IV IN PROGRAMMING 2020</p>
+            <p><b>TAFE NSW</b></p>
+          </div>
+        </div>
+        <div class="education">
+          <div class="bubble">
+            <p>CERTIFICATE IN WORKFORCE ESSENTIALS 2016</p>
+            <p><b>Charles Sturt University</b></p>
+          </div>
+        </div>
+        <a
+          class="link"
+          style="margin-top: 20px"
+          href="./documents/Lachelle_Pavlovic_Resume_CV.pdf"
+          download
+          >Click to download my CV!</a
+        >
 
+      </div>
+    </div>
     <footer class="footer">
       <a
         title="Email"
